@@ -47,12 +47,15 @@ UIDescription& UIEditController::getEditorDescription ()
 	static bool once = true;
 	if (once)
 	{
-	#if WINDOWS
-		const int8_t pathSeparator = '\\';
-	#else
 		const int8_t pathSeparator = '/';
-	#endif
 		std::string descPath (__FILE__);
+		size_t found = descPath.find_first_of ("\\");
+		while (found != std::string::npos)
+		{
+			descPath[found] = pathSeparator;
+			found = descPath.find_first_of ("\\", found + 1);
+		}
+
 		size_t sepPos = descPath.find_last_of (pathSeparator);
 		if (sepPos != std::string::npos)
 		{
